flapivor/tests/m3/hopix/typechecker/good/01-int-literal.hopix
val x : Int = 42
val y : Int = -42