flapivor/tests/m3/hopix/typechecker/bad/02-variable-in-another-scope.hopix
val y : Int =
    val x : Int = 0;
    x
val main : Int = x